# system_monitoring_app

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  monitor.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: setup.yml
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  ChatWidget.jsx  index.css
k8s/: autoscaler-deployment.yaml  chroma-deployment.yaml  chroma-pvc.yaml  chroma-service.yaml  client-deployment.yaml  client-node-port-service.yaml  database-persistant-volume-claim.yaml  ingress.yaml  monitor-deployment.yaml  postgres-cluster-ip-service.yaml  postgres-deployment.yaml  server-cluster-ip-service.yaml  server-deployment.yaml  server-role-binding.yaml  server-role.yaml  server-service-account.yaml
src/: actuator.py  api.py  autoscaler.py  check_models.py  database.py  monitor.py  predictor.py  rag_agent.py
tests/: test_api.py  test_autoscaler.py  test_integration.py
