[project]
name = "system-monitoring-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "bcrypt>=5.0.0",
    "build>=1.5.0",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "chromadb>=1.5.9",
    "click>=8.4.1",
    "cryptography>=48.0.1",
    "docker>=7.1.0",
    "durationpy>=0.10",
    "fastapi>=0.136.3",
    "filelock>=3.29.3",
    "flatbuffers>=25.12.19",
    "fsspec>=2026.4.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.25.2",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-generativeai>=0.8.6",
    "googleapis-common-protos>=1.75.0",
    "grpcio>=1.81.0",
    "grpcio-status>=1.71.2",
    "h11>=0.16.0",
    "hf-xet>=1.5.1",
    "httpcore>=1.0.9",
    "httplib2>=0.31.2",
    "httptools>=0.8.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "idna>=3.18",
    "importlib-metadata>=9.0.0",
    "importlib-resources>=7.1.0",
    "joblib>=1.5.3",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "kubernetes>=36.0.2",
    "markdown-it-py>=4.2.0",
    "mdurl>=0.1.2",
    "mmh3>=5.2.1",
    "mpmath>=1.3.0",
    "numpy>=2.4.6",
    "oauthlib>=3.3.1",
    "onnxruntime>=1.26.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp-proto-common>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-proto>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "orjson>=3.11.9",
    "overrides>=7.7.0",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "proto-plus>=1.28.0",
    "protobuf>=5.29.6",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pybase64>=1.4.3",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydantic-settings>=2.14.1",
    "pygments>=2.20.0",
    "pyparsing>=3.3.2",
    "pypika>=0.51.1",
    "pyproject-hooks>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "referencing>=0.37.0",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "rpds-py>=2026.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "starlette>=1.3.0",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.2",
    "typer>=0.25.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uritemplate>=4.2.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.2.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
    "zipp>=4.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
    "testcontainers>=4.14.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.coverage.run]
omit = [
    "src/actuator.py",
    "src/check_models.py",
    "src/monitor.py",
    "src/predictor.py",
    "src/rag_agent.py"
]